GNOME Bugzilla – Bug 660999
opusenc: fix latency query
Last modified: 2011-11-07 18:45:37 UTC
Created attachment 198357 [details] [review] opusenc: use debug level for debug info, not error
Created attachment 198358 [details] [review] opusenc: fix latency query This makes live 'audiosrc ! opusenc ! opusdec ! audiosink' pipelines actually work without all audio being dumped.
commit 97d456bad2c174649ab9e1f3b34efd280a030fc4 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Wed Oct 5 18:25:58 2011 +0100 opusenc: fix latency query This makes live 'audiosrc ! opusenc ! opusdec ! audiosink' pipelines actually work without all audio being dumped. https://bugzilla.gnome.org/show_bug.cgi?id=660999 commit 18c2d1ef9f4c8815f56575ae235a5989a0f7bdfe Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Wed Oct 5 15:47:06 2011 +0100 opusenc: use debug level for debug info, not error https://bugzilla.gnome.org/show_bug.cgi?id=660999