opusenc: use debug level for debug info, not error

https://bugzilla.gnome.org/show_bug.cgi?id=660999